--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "vue3-google-map": "^0.18.0"
+    "nuxt-mail": "^4.0.1",
+    "vue3-google-map": "^0.18.0",
+    "vue3-toastify": "^0.1.14"
   }
 }
